Update index.html Изменение панели меню

--- a/index.html
+++ b/index.html
@@ -84,17 +84,7 @@
         }
         /* Увеличение отступа на мобильных устройствах */
 
-        /* Корректировка позиционирования навигации */
-        nav {
-            top: 20px; /* Смещаем меню вниз */
-        }
-        /* Смещение навигационного меню вниз на 20px */
-
-        /* Корректировка мобильного меню */
-        #mobile-menu {
-            margin-top: 20px;
-        }
-        /* Добавление отступа сверху для мобильного меню */
+        /* Удалены стили nav и #mobile-menu, так как позиционирование теперь задается через классы */
     </style>
     <!-- Конец пользовательских CSS стилей -->
 </head>
@@ -106,14 +96,14 @@
     <!-- Navigation -->
     <!-- Комментарий: Навигационное меню -->
 
-    <nav class="fixed top-20 w-full bg-white/90 backdrop-blur-sm z-50 border-b border-gray-100">
-        <!-- Фиксированное навигационное меню с прозрачным белым фоном и размытием -->
+    <nav class="fixed top-0 w-full bg-white/90 backdrop-blur-sm z-50 border-b border-gray-100">
+        <!-- Фиксированное навигационное меню с прозрачным белым фоном и размытием, прижатое к верху -->
 
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <!-- Контейнер с максимальной шириной и автоматическими отступами по бокам -->
 
-            <div class="flex justify-between items-center h-16">
-                <!-- Гибкий контейнер для выравнивания элементов по краям с высотой 16 -->
+            <div class="flex justify-between items-center h-16 pt-20">
+                <!-- Гибкий контейнер для выравнивания элементов по краям с высотой 16 и отступом сверху 20px -->
 
                 <div class="font-playfair text-xl font-semibold text-primary">
                     <!-- Блок с названием сайта, использующий шрифт Playfair Display -->
@@ -156,8 +146,8 @@
         <!-- Mobile menu -->
         <!-- Комментарий: Мобильное меню -->
 
-        <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-100">
-            <!-- Мобильное меню, скрыто на средних+ экранах с белым фоном и верхней границей -->
+        <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-100 pt-20">
+            <!-- Мобильное меню, скрыто на средних+ экранах с белым фоном, верхней границей и отступом сверху -->
 
             <div class="px-2 pt-2 pb-3 space-y-1">
                 <!-- Контейнер с внутренними отступами и вертикальным расстоянием между элементами -->
@@ -544,10 +534,4 @@
 <!-- Конец тела страницы -->
 
 </html>
-<!-- Конец HTML-документа
-HTML-структура - основа веб-страницы с разделением на head (метаинформация) и body (содержимое)
-CSS-стили - определяют внешний вид элементов
-Tailwind CSS - упрощает стилизацию через классы
-JavaScript-библиотеки - добавляют интерактивность и анимации
-Адаптивность - страница корректно отображается на разных устройствах
-Решение проблемы с Telegram - добавлены отступы для избежания перекрытия кнопками Telegram-->
+<!-- Конец HTML-документа -->
