Update index.html фикс выпавших букв

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <!-- Контейнер с максимальной шириной и автоматическими отступами по бокам -->
 
-            <div class="flex justify-between items-center h-20 pt-20">
-                <!-- Гибкий контейнер для выравнивания элементов по краям с высотой 16 и отступом сверху 20px -->
+            <div class="flex justify-between items-center h-16">
+                <!-- Гибкий контейнер для выравнивания элементов по краям с высотой 16 -->
 
                 <div class="font-playfair text-xl font-semibold text-primary">
                     <!-- Блок с названием сайта, использующий шрифт Playfair Display -->
@@ -146,8 +146,8 @@
         <!-- Mobile menu -->
         <!-- Комментарий: Мобильное меню -->
 
-        <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-100 pt-20">
-            <!-- Мобильное меню, скрыто на средних+ экранах с белым фоном, верхней границей и отступом сверху -->
+        <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-100">
+            <!-- Мобильное меню, скрыто на средних+ экранах с белым фоном и верхней границей -->
 
             <div class="px-2 pt-2 pb-3 space-y-1">
                 <!-- Контейнер с внутренними отступами и вертикальным расстоянием между элементами -->
@@ -170,8 +170,8 @@
     <!-- Hero Section -->
     <!-- Комментарий: Главная секция страницы -->
 
-    <section id="home" class="hero-bg min-h-screen flex items-center pt-16">
-        <!-- Секция с градиентным фоном, минимальной высотой экрана и вертикальным центрированием -->
+    <section id="home" class="hero-bg min-h-screen flex items-center pt-20">
+        <!-- Секция с градиентным фоном, минимальной высотой экрана, вертикальным центрированием и отступом сверху -->
 
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
             <!-- Контейнер с максимальной шириной, автоматическими отступами и вертикальными отступами -->
