Update index.html  откат

--- a/index.html
+++ b/index.html
@@ -84,7 +84,17 @@
         }
         /* Увеличение отступа на мобильных устройствах */
 
-        /* Удалены стили nav и #mobile-menu, так как позиционирование теперь задается через классы */
+        /* Корректировка позиционирования навигации */
+        nav {
+            top: 20px; /* Смещаем меню вниз */
+        }
+        /* Смещение навигационного меню вниз на 20px */
+
+        /* Корректировка мобильного меню */
+        #mobile-menu {
+            margin-top: 20px;
+        }
+        /* Добавление отступа сверху для мобильного меню */
     </style>
     <!-- Конец пользовательских CSS стилей -->
 </head>
@@ -96,8 +106,8 @@
     <!-- Navigation -->
     <!-- Комментарий: Навигационное меню -->
 
-    <nav class="fixed top-0 w-full bg-white/90 backdrop-blur-sm z-50 border-b border-gray-100">
-        <!-- Фиксированное навигационное меню с прозрачным белым фоном и размытием, прижатое к верху -->
+    <nav class="fixed top-20 w-full bg-white/90 backdrop-blur-sm z-50 border-b border-gray-100">
+        <!-- Фиксированное навигационное меню с прозрачным белым фоном и размытием -->
 
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <!-- Контейнер с максимальной шириной и автоматическими отступами по бокам -->
@@ -170,8 +180,8 @@
     <!-- Hero Section -->
     <!-- Комментарий: Главная секция страницы -->
 
-    <section id="home" class="hero-bg min-h-screen flex items-center pt-20">
-        <!-- Секция с градиентным фоном, минимальной высотой экрана, вертикальным центрированием и отступом сверху -->
+    <section id="home" class="hero-bg min-h-screen flex items-center pt-16">
+        <!-- Секция с градиентным фоном, минимальной высотой экрана и вертикальным центрированием -->
 
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-20">
             <!-- Контейнер с максимальной шириной, автоматическими отступами и вертикальными отступами -->
@@ -534,4 +544,10 @@
 <!-- Конец тела страницы -->
 
 </html>
-<!-- Конец HTML-документа -->
+<!-- Конец HTML-документа
+HTML-структура - основа веб-страницы с разделением на head (метаинформация) и body (содержимое)
+CSS-стили - определяют внешний вид элементов
+Tailwind CSS - упрощает стилизацию через классы
+JavaScript-библиотеки - добавляют интерактивность и анимации
+Адаптивность - страница корректно отображается на разных устройствах
+Решение проблемы с Telegram - добавлены отступы для избежания перекрытия кнопками Telegram-->
