Update about.html узнать об*

--- a/about.html
+++ b/about.html
@@ -284,7 +284,7 @@
                         Записаться на консультацию
                     </a>
                     <a href="services.html" class="inline-flex items-center justify-center px-8 py-4 border-2 border-primary text-primary font-medium rounded-lg hover:bg-primary hover:text-white transition-colors text-lg">
-                        Узнать о услугах
+                        Узнать об услугах
                     </a>
                 </div>
             </div>
