Update contact.html cosmetic

--- a/contact.html
+++ b/contact.html
@@ -193,7 +193,8 @@
                         <div class="flex items-start space-x-4">
                             <div class="w-6 h-6 accent-bg rounded-full flex-shrink-0 mt-1"></div>
                             <div>
-                                <p class="text-secondary">Запишем вас на удобное время</p>
+                                <p class="text-secondary">Запишем вас на удобное время
+                                  </p>
                             </div>
                         </div>
                     </div>
