--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
                     <h3 class="font-playfair text-2xl font-semibold text-primary mb-4">Telegram</h3>
                     <p class="text-secondary mb-4">Быстрая связь и запись</p>
                     <a href="https://t.me/Di_vadimovna" target="_blank" class="text-primary font-semibold hover:text-accent-text transition-colors">
-                        @Di_vadimovna
+                        @Di_Vadimovna
                     </a>
                 </div>
                 
@@ -193,8 +193,7 @@
                         <div class="flex items-start space-x-4">
                             <div class="w-6 h-6 accent-bg rounded-full flex-shrink-0 mt-1"></div>
                             <div>
-                                <p class="text-secondary">Запишем вас на удобное время
-                                  </p>
+                                <p class="text-secondary">Запишем вас на удобное время <br> </p>
                             </div>
                         </div>
                     </div>
